# ian

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTION.md  Dockerfile  Makefile  README.en.md  README.md  daily_event_reminder.py  discord_chatbot.py  docker-compose.yml  host_agent_client.py  injection_patterns.py  mcp_server.py  member_db.py  pyproject.toml  requirements.txt  start.sh  webhook_server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
assets/: ian.jpg.license
scripts/: add_license_headers.py
src/ian/: __init__.py  cli.py  config.py
src/ian/domain/: __init__.py  courses.py  injection.py  members.py  messages.py  reminders.py  urls.py
src/ian/gateways/: __init__.py  agent_bridge.py  discord_bot.py  facebook_webhook.py  line_webhook.py  mcp_server.py  messaging_common.py  webhook_server.py
src/ian/services/: __init__.py  agent_runtime.py  course_catalog.py  discord_api.py  member_api.py  member_cache.py  member_mcp_repository.py  member_service.py  member_store.py  notifications.py  rag.py  reminder_runner.py  service_supervisor.py
src/ian/services/agent/: __init__.py  callbacks.py  logging.py  prompt.py  runtime.py  sessions.py  usage.py
src/ian/utils/: __init__.py  console.py  logging.py
tests/: test_cli.py  test_config.py  test_console.py  test_license_headers.py  test_logging.py  test_test_structure.py
tests/agent/: test_agent_placeholder.py
tests/domain/: test_courses.py  test_injection.py  test_member_models.py  test_members.py  test_messages.py  test_reminders.py  test_urls.py
tests/gateways/: test_agent_bridge.py  test_cli_entrypoints.py  test_facebook_webhook.py  test_line_webhook.py  test_mcp_server.py  test_webhook_server.py
tests/integration/: test_integration_placeholder.py
tests/services/: test_agent_lifecycle_logging.py  test_agent_package.py  test_agent_url_validation.py  test_course_catalog.py  test_discord_api.py  test_member_api.py  test_member_cache.py  test_member_mcp_repository.py  test_member_service.py  test_member_store_lookup_reload.py  test_member_store_updates.py  test_notifications.py  test_rag.py  test_reminder_runner.py  test_service_supervisor.py
